<resources>
    <string name="app_name">"BookInventory "</string>
    <string name="action_settings">Settings</string>
    <string name="add_sample_book">Add sample book</string>
    <string name="book_info">Book Information</string>
    <string name="book_title">Title</string>
    <string name="author">Author</string>
    <string name="pages">Pages</string>
    <string name="edition">Edition</string>
    <string name="genre">Genre</string>
    <string name="publisher">Publisher</string>
    <string name="price">Price $</string>
    <string name="quantity">Quantity</string>

    <string name="gen_unknown">Unknown</string>
    <string name="gen_art">Art</string>
    <string name="gen_biography">Biography</string>
    <string name="gen_business">Business</string>
    <string name="gen_kids">Kids</string>
    <string name="gen_comics">Comics</string>
    <string name="gen_tech">Tech</string>
    <string name="gen_cooking">Cooking</string>
    <string name="gen_hobby">Hobby</string>
    <string name="gen_health">Health</string>
    <string name="gen_history">History</string>
    <string name="gen_horror">Horror</string>
    <string name="gen_fiction">Fiction</string>
    <string name="save_book">book</string>
    <string name="delete_book">delete</string>
    <string name="delete_confirmaiton">Are you sure you want to delete this book?</string>


    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>


    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <string name="quote">\"Think before you speak. Read before you think\" - George R.R. Martin</string>
    <string name="click_below">You know you love books, click the button below to add one</string>
    <string name="supplier">Supplier Phone Number</string>
    <string name="upload_button">upload cover</string>
    <string name="subtitle">Publisher, Quanitity, Supplier Info</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="phone_button">Order by phone</string>


</resources>
